welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value len
                                            for (i<-0 to len(nums)-1){if (nums(i)> max){max= nums(i)
                                                         ^